set LANG if we have language to glibc locale mapping

BUG: 464983

Instead of relying on build options like `GLIBC_LOCALE_GEN`, we set LANG if we have language to locale code mapping. Also change the definition of unsupported language from "whatever language we don't have locale mapping" to "languages not in plasmashell i18n scope"


(cherry picked from commit 889e414279e519b7cb444445b493d0eb1865baf2)