kcms/region_language/kcmregionandlang.h
@@ -8,6 +8,7 @@
 
 #pragma once
 
+#include <optional>
 #include <unordered_map>
 
 #include "settingtype.h"
@@ -35,8 +36,8 @@ public:
     OptionsModel *optionsModel() const;
     bool enabled() const;
     static bool isGlibc();
+    std::optional<QString> toGlibcLocale(const QString &lang);
     Q_INVOKABLE void unset(KCM_RegionAndLang::SettingType setting);
-    Q_INVOKABLE QString toGlibcLocale(const QString &lang);
     Q_INVOKABLE void reboot();
 Q_SIGNALS:
     void saveClicked();
